chrome/browser/resources/contextual_tasks/composebox.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=chrome://resources/cr_elements/cr_shared_vars.css.js
 * #scheme=relative
 * #css_wrapper_metadata_end */

/* TODO(crbug.com/461801378): Add styling for non-AIM pages. */

:host {
  --aim-header-height: 66px;
  --cancel-button-inline-end: 16px;
  --cancel-button-top: 12px;
  --composebox-border-radius: 24px;
  --composebox-collapsed-height: 90px;
  --composebox-margin-bottom: 30px;
  --context-carousel-inline-end-spacing: 24px;
  --context-carousel-inline-start-spacing: 24px;
  --composebox-container-height:
    calc(var(--composebox-height) + var(--composebox-dropdown-height)
      + var(--composebox-margin-bottom)
    );
  /* Shared sizing between voice cancel and regular cancel buttons. */
  --composebox-cancel-button-size: 40px;
  --composebox-icon-menu-bottom: 12px;
  --composebox-submit-container-size: 48px;
  --composebox-submit-container-inline-end:
      var(--composebox-last-icon-inline-end);
  --composebox-last-icon-inline-end: 12px;
  --cr-composebox-file-chip-url-text-size: 11px;
  --cr-composebox-file-chip-title-text-size: 14px;
  --cr-searchbox-height: 52px;
  --cr-searchbox-min-width: min(calc(100%), 1100px);
  --icon-menu-spacing: 6px;
  --icon-menu-icon-size: 24px;
  --icon-menu-button-size: 40px;
  /* TODO(crbug.com/467758241): Change
   * pdf icon to one without outline just for contextual tasks.
   * Border-radius is temporary fix to hide
   * most of outline.
   */
  --pdf-icon-border-radius: 12px;
  --pdf-icon-size: 16px;
}

/* Composebox default colors are for light mode on AIM results. */
#composeboxContainer {
  --color-composebox-scrim-background: var(--search-background-color);
  --composebox-container-height:
    calc(var(--composebox-height) + var(--composebox-dropdown-height)
    + var(--composebox-margin-bottom));

  align-items: center;
  height: auto;
  justify-content: flex-end;
  min-height: var(--composebox-collapsed-height);
  position: relative;
  /* Do not set pointer-events to none; is inherited by
   * whole composebox + buttons. Width var taken from parent.
   */
  width: 100%;
}

:host(:not([is-zero-state])) #composeboxContainer {
  margin-bottom: var(--composebox-margin-bottom);
}

/* When the composebox is focused, make the background color
 * extend to the top of the screen so that the user can see the full
 * composebox when it is expanded. */
:host([is-composebox-focused])
  #composeboxContainer:has(#composebox[show-dropdown_]) {
  background: linear-gradient(to top,
    rgba(var(--search-background-color-rgb), 1) var(--composebox-container-height),
    rgba(var(--search-background-color-rgb), 0.9) 75vh,
  transparent);
  height: 100%;
  inset-block-start: auto;
  pointer-events: auto;
  position: fixed;
}

:host(:not([input-enabled])) #composebox::part(composebox) {
  opacity: 0.4;
  pointer-events: none;
}

:host(:not([input-enabled])) #composebox::part(input) {
  caret-color: transparent;
}

:host(:not([is-zero-state])) #composebox::before {
  background: var(--search-background-color);
  border-radius: var(--composebox-border-radius);
  content: '';
  display: block;
  /* Expand past the bottom of the composebox.
   * Requires parent to have overflow hidden.
   */
  height: 40vh;
  position: absolute;
  width: 100%;
  z-index: 0;
}

/* Add border in ::after instead of '#composebox' so it
 * is on top of ::before.
 */
#composebox::after {
  content: '';
  position: absolute;
  inset: 0;
  border: 1px solid var(--color-composebox-input-plate-outline);
  border-radius: var(--composebox-border-radius);
  box-sizing: border-box;
  pointer-events: none;
  z-index: 2;
}

#composebox {
  --composebox-thumbnail-img-chip-size: 44px;
  --expanded-border-radius: var(--composebox-border-radius);
  --input-bottom-spacing: 16px;
  --text-input-left-spacing: 24px;
  --text-input-top-spacing: 16px;
  --composebox-context-menu-entrypoint-button-color:
      var(--color-composebox-voice-lens-button);
  --contextual-entrypoint-and-carousel-context-entrypoint-padding-inline: 0;

  box-shadow: none;
  box-sizing: border-box;
  display: block;
  max-width: var(--composebox-max-width);
  position: relative;
  /* Fast out (start), slow in (end) box shadow transition. */
  transition: box-shadow 600ms cubic-bezier(0.4, 0.0, 0.2, 1);
  width: 100%;
  z-index: 1;
}

:host([is-zero-state]) #composebox {
  bottom: auto;
}

:host([is-side-panel]) #composeboxContainer #composebox {
  max-width: var(--composebox-max-width);
  min-width: 200px;
}

#composebox::part(thumbnail) {
  --thumbnail-size_: 28px;
  height: var(--thumbnail-size_);
  padding: 0;
  width: var(--thumbnail-size_);
}

:host([is-zero-state]) #composeboxContainer {
  background: transparent;
  display: block;
  position: relative;
}

#composebox::part(g-container) {
  max-height: 40vh;
  padding: 0;
}

#composebox::part(input),
#composebox::part(tool-chip-label),
#composebox::part(file-thumbnail-title) {
  font-family: var(--google-sans-font);
}

#composebox::part(input-container) {
  transition: padding-top var(--emphasized-curve);
  transition-duration: var(--collapse-duration);
}

#composebox[expanding_]::part(input-container) {
  transition-duration: var(--expand-duration);
}

#composebox::part(carousel-divider) {
  display: none;
}

#composebox::part(carousel-container) {
  opacity: 0;
}

#composebox[show-file-carousel_][expanding_]::part(carousel-container) {
  opacity: 1;
  transition: var(--icon-entry-transition);
}

#composebox[show-file-carousel_]::part(carousel-container) {
  /* Give room for the close button in the top right. */
  --context-carousel-inline-end-spacing: 62px;
}

#composebox:not([expanding_])[show-file-carousel_]::part(cr-composebox-file-carousel) {
  pointer-events: none;
}
/* ... */

