[contextual tasks] carousel spacing fix
* Files currently are not spaced properly from top left edges of
  composebox in contextual tasks.
* This updates it according to the Figma.

file spacing with new chips: https://screencast.googleplex.com/cast/NjU5ODk1NDQwOTAwMDk2MHw0YWI5MjY3Ni0yZg

no realbox ntp regression: https://screenshot.googleplex.com/9BTTTXDq6vgHn4U

Bug: b:469170159
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7569453
Commit-Queue: James Leung <jamesleung@google.com>
Cr-Commit-Position: refs/heads/main@{#1585058}

--- a/chrome/browser/resources/contextual_tasks/composebox.css
+++ b/chrome/browser/resources/contextual_tasks/composebox.css
@@ -17,8 +17,11 @@
   --composebox-border-radius: 24px;
   --composebox-collapsed-height: 90px;
   --composebox-margin-bottom: 30px;
-  --context-carousel-inline-end-spacing: 24px;
-  --context-carousel-inline-start-spacing: 24px;
+  --context-carousel-inline-end-spacing: 56px;
+  --context-carousel-inline-start-spacing: 20px;
+  --context-carousel-top-position: 20px;
+  --context-top-carousel-bottom-margin: 0;
+  --context-top-carousel-top-margin: 0;
   --composebox-container-height:
     calc(var(--composebox-height) + var(--composebox-dropdown-height)
       + var(--composebox-margin-bottom)
@@ -198,7 +201,7 @@
 
 #composebox[show-file-carousel_]::part(carousel-container) {
   /* Give room for the close button in the top right. */
-  --context-carousel-inline-end-spacing: 62px;
+  --context-carousel-inline-end-spacing: 56px;
 }
 
 #composebox:not([expanding_])[show-file-carousel_]::part(cr-composebox-file-carousel) {
